"fix: Boton para agregar playa dejó de funcionar y texto de login offcenter.
- Al añadir el js sin querer se introdujo mal la ruta a este haciendo que el botón de agregar playa no funcionase, ya se ha corregido.
- El input de Usuario y Contraseña del login estabán un poco fuera del centro. Se añadio 10px de padding lateral"

--- a/SurfApp/static/SurfApp/css/login-styles.css
+++ b/SurfApp/static/SurfApp/css/login-styles.css
@@ -26,8 +26,8 @@ body {
 }
 
 .login-container input {
-    width: 100%;
-    padding: 10px 0px;
+    width: 90%;
+    padding: 10px 14px;
     margin: 10px 0px;
     border: 1px solid #ccc;
     border-radius: 12px;
